--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@
     padding: 20px;
     color: #006bc0;
 }
+.navbar header img{
+    height: 100px;
+}
 .nav_link{
     margin-top: 0px;
     text-align: center;
@@ -64,14 +67,25 @@
 }
 @media screen and (max-width: 1100px){
     .navbar{
-        height: 120px;
+        height: 130px;
         width: 100%;
 
     }
     .navbar header{
         text-align: center;
-        padding: 0px;
+        padding: 5px;
         border-bottom: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .navbar header img{
+        height: 70px;
+    }
+    .navbar header h1{
+        text-align: center;
+        justify-content: center;
+        margin-top: 20px; 
     }
     .nav_link{
         display: flex;
@@ -97,6 +111,9 @@
 }
 @media screen and (max-width: 530px){
     #referencess{
+        display: none;
+    }
+    .navbar header a{
         display: none;
     }
 }
